syntax = "proto3";

package file_processor;

service FileProcessor {
  rpc CompressPDF(FileRequest) returns (FileResponse);
  rpc ConvertToTXT(stream FileChunk) returns (stream FileChunk);
  rpc ConvertImageFormat(stream FileChunk) returns (stream FileChunk);
  rpc ResizeImage(stream FileChunk) returns (stream FileChunk);
}

message FileRequest {
  string file_name = 1;
  bytes file_content = 2;
}

message FileResponse {
  bool success = 1;
  string status_message = 2;
  string file_name = 3;
  bytes file_content = 4;
}

message FileChunk {
  string file_name = 1;
  bytes chunk_data = 2;
  bool is_last = 3;
}